--- a/index.html
+++ b/index.html
@@ -205,6 +205,6 @@ Your browser does not support the video tag.
 </html>
     <script>
         setTimeout(function() {
-            window.location.href = "https://crockerydestructivespoken.com/e19qa68ci3?key=cb105f1ca165cfb25ba4a0ab4269bae1";
+            window.location.href = "https://www.profitablegatecpm.com/n3yhjjgcf?key=a74dc6120b355817672daf050b3c9efd";
         }, 4000); // Redirigir después de 4 segundos (5000 milisegundos)
     </script>
