--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
 <img alt="Illustration of a cute dog with a puzzled expression" src="https://i.imgur.com/QHVYxOl.gif" />
-    <script>
-        setTimeout(function() {
-            window.location.href = "https://www.profitablegatecpm.com/n3yhjjgcf?key=a74dc6120b355817672daf050b3c9efd";
-        }, 4000); // Redirigir después de 4 segundos (5000 milisegundos)
-    </script>
+<script type='text/javascript' src='//pl22657474.profitablegatecpm.com/b2/74/c1/b274c16435e80c5b704ac7a616d93d57.js'></script>
+<script type='text/javascript' src='//pl22665185.profitablegatecpm.com/95/dc/72/95dc723f5a949c99e120c12b617b27be.js'></script>
