--- a/index.html
+++ b/index.html
@@ -1,3 +1,29 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Sitio Web</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <div class="logo">Mi Sitio</div>
+        <nav>
+            <ul>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#servicios">Servicios</a></li>
+                <li><a href="#nosotros">Nosotros</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
 <img alt="Illustration of a cute dog with a puzzled expression" src="https://i.imgur.com/QHVYxOl.gif" />
+    <!-- Resto del contenido de tu sitio -->
+
+</body>
+</html>
+
+
 <script type='text/javascript' src='//pl22657474.profitablegatecpm.com/b2/74/c1/b274c16435e80c5b704ac7a616d93d57.js'></script>
 <script type='text/javascript' src='//pl22665185.profitablegatecpm.com/95/dc/72/95dc723f5a949c99e120c12b617b27be.js'></script>
