--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">Mi Sitio</div>
+        <div class="logo">Videy</div>
         <nav>
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
